<resources>
    <string name="app_name" translatable="false">LogicA</string>
    <string name="language_label">Language: </string>
    <string name="music_label">Music:</string>
    <string name="difficulty_label">Difficulty: </string>
    <string name="apply">Apply</string>
    <string name="settings"><u>SETTINGS</u></string>
    <string-array name="language_array">
        <item>English</item>
        <item>中文</item>
        <item>日本語</item>
    </string-array>
    <string name="score_mode">SCORE MATCH</string>
    <string name="round_mode">ROUND MATCH</string>
    <string name="resume_game">RESUME GAME</string>
    <string name="quit_game_label">QUIT GAME</string>
    <string name="player1">Player 1</string>
    <string name="player2">Player 2</string>
    <string name="score_label">Score: </string>
    <string name="answer_label">Answer</string>
    <string name="score_mode_description">The game ends whenever a player reaches +/- of target score</string>
    <string name="answer_dialog_title">Enter your (" %1$s ") answer:</string>
    <string name="submit_label">Submit</string>
    <string name="correct_answer_label">Congratulation! Correct Answer!</string>
    <string name="incorrect_answer_label">Incorrect Answer</string>
    <string name="round_time_label">Round %1$d</string>
    <string name="game_pause_label">Game Paused</string>
    <string name="disabled_time_label">Disabled\n%1$02d</string>
    <string name="game_over_label">Game Over</string>
    <string name="quit_label">Quit</string>
    <string name="click_label">Click</string>
    <string name="hint_input_title">Enter your Input for Hint:</string>
    <string name="hint_input_message">Integer range from 0 to 9999</string>
    <string name="invalid_value_label">Invalid Value</string>
    <string name="winner_message_label">Congratulations! %1$s wins the game!!</string>
    <string name="round_time_initial_label">Round_1 - 180 Seconds (20)</string>
    <string name="time_up_label">Time Up for this Round!\nOperator: #%1$d, Answer: %2$d</string>
    <string name="new_game_label">New Game</string>
    <string name="title_E01">01. Addition (Easy)</string>
    <string name="title_E02">02. Subtraction (Easy)</string>
    <string name="title_E03">03. Multiplication (Easy)</string>
    <string name="title_E04">04. Close Area (Easy)</string>
    <string name="title_E05">05. Reverse Larger Number (Easy)</string>
    <string name="title_E06">06. Reverse Smaller Number (Easy)</string>
    <string name="title_E07">07. X Counter (Easy)</string>
    <string name="title_E08">08. Contain (Easy)</string>
    <string name="title_E09">09. Both Contain (Easy)</string>
    <string name="title_E10">10. GCF (Easy)</string>
    <string name="title_E11">11. LCM (Easy)</string>
    <string name="title_E12">12. Total Digits (Easy)</string>
    <string name="title_E13">13. Digit Difference (Easy)</string>
    <string name="title_E14">14. Print Sum of Digits (Easy)</string>
    <string name="title_H01">25. Binary One (Hard)</string>
    <string name="title_H02" translatable="false">26. Binary Addition under 10 (Hard)</string>
    <string name="title_H03" translatable="false">27. Binary Subtraction under 10 (Hard)</string>
    <string name="title_H04" translatable="false">28. Reverse of Sum (Hard)</string>
    <string name="title_H05" translatable="false">29. Reverse of Difference (Hard)</string>
    <string name="title_H06" translatable="false">30. Integer Counter (Hard)</string>
    <string name="title_H07" translatable="false">31. Sum of Digits Sum(Hard)</string>
    <string name="title_H08" translatable="false">32. Subtract of Digits Sum (Hard)</string>
    <string name="description_E01">Sum of A and B</string>
    <string name="description_E02">Difference between A and B (Absolution value of A - B)</string>
    <string name="description_E03">Multiply of A and B</string>
    <string name="description_E04">Total amount of close areas in A and in B \u000Awhere 1, 2, 3, 5, 7 -> 0 Area | 0, 4, 6, 9 -> 1 Area | 8 -> 2 Areas</string>
    <string name="description_E05">Reverse Digits in larger number of A and B</string>
    <string name="description_E06">Reverse Digits in smaller number of A and B</string>
    <string name="description_E07">Total number of digit X appear in A and B</string>
    <string name="description_E08">Does either A or B contain the digit X? \u000AYes -> 1 | No -> 0</string>
    <string name="description_E09">Do both A and B contain the digit X? \u000AYes -> 1 | No -> 0</string>
    <string name="description_E10">Greatest common factor of A and B</string>
    <string name="description_E11">Least common multiple of A and B</string>
    <string name="description_E12">Total number of digits in A and B</string>
    <string name="description_E13">Difference between the number of digits in A and B</string>
    <string name="description_E14">Sum of individual digit in A print together with individual digit sum of B</string>
    <string name="description_H01" translatable="false">Total number of 1\'s in the binary representation of A and B</string>
    <string name="description_H02" translatable="false">Print binary representation of sum of least significant digit of A and B</string>
    <string name="description_H03" translatable="false">Print binary representation of difference between least significant digit of A and B</string>
    <string name="description_H04">Reverse Digits of A + B</string>
    <string name="description_H05">Reverse Digits of absolution number of A - B</string>
    <string name="description_H06">Display the frequency of each digit in A and B in descending order</string>
    <string name="description_H07">Sum of individual digit in A + sum of individual digit in B</string>
    <string name="description_H08">Absolute value of Sum of individual digit in A - sum of individual digit in A</string>
    <string name="start_game_label">Start Game</string>
    <string name="round_mode_description">The game ends when it reaches the target round</string>
    <string name="round_mode_title">Round Mode</string>
    <string name="score_mode_title">Score Mode</string>
    <string name="tut_main_1" translatable="false">Gameplay button, allows you to start the game</string>
    <string name="tut_main_2" translatable="false">Function List, allows you to review all the possible functions from the game</string>
    <string name="tut_main_3" translatable="false">Tutorial button, contains helpful information about the game</string>
    <string name="tut_main_4" translatable="false">Settings button, change languages and enable music through here</string>
    <string name="tut_main_5" translatable="false">Quit button</string>
    <string name="tut_main_6" translatable="false">Friendly Tip: You can drag to the direction of the button to quickly access the buttons.</string>
    <string name="tut_game_1" translatable="false">This is the equation that both players need to solve in order to win</string>
    <string name="tut_game_2" translatable="false">This is the hint area, a hint is revealed every minute.                               Put your input in after clicking on "CLICK"</string>
    <string name="tut_game_3" translatable="false">Answer button for each player, go for it if you think you know the answer!                 Note: If you get the answer wrong you will be penalized for 20 seconds, be careful!</string>
    <string name="tut_game_4" translatable="false">This area show the round number and the remaining time for the game</string>
    <string name="tut_game_5" translatable="false">The score of each player</string>
    <string name="tut_func_1" translatable="false">Title of the function, click to expand for more detailed description or example</string>
    <string name="tut_func_2" translatable="false">Description</string>
    <string name="tut_func_3" translatable="false">Example button, click to test out this function</string>
    <string name="tut_func_4" translatable="false">Example Window\n\t1: Input values to pass into the function\n\t2: A random value that may be used for the function\n\t3: The result generated by the function from your values\n\t4: To calculate the values you have put in (inputs cannot be empty)\n\t5: To reset for new input values</string>
    <string name="faq_label">FAQ</string>
    <string name="tut_faq_1q" translatable="false">How do I start the game?</string>
    <string name="tut_faq_1a" translatable="false">The middle button from main menu</string>
    <string name="tut_faq_2q" translatable="false">Why do I always get the answer wrong?</string>
    <string name="tut_faq_2a" translatable="false">Use the Function List as a review and practice, practice, practice!</string>
    <string name="tut_faq_3q" translatable="false">I found a bug in the game, how do I report it?</string>
    <string name="tut_faq_3a" translatable="false">Please send a ticket to...</string>
    <string name="tut_faq_4q" translatable="false">The music is really annoying, how can I disable it?</string>
    <string name="tut_faq_4a" translatable="false">Go to Settings (drag down from Main Menu) -> uncheck Music</string>
    <string name="tut_faq_5q" translatable="false">How can I change the language?</string>
    <string name="tut_faq_5a" translatable="false">Go to Settings (drag down from Main Menu) -> select desired language</string>
    <string name="warning_label">Warning!</string>
    <string name="warning_description">Applying the changes will require you to restart the game</string>
    <string name="cancel_label">Cancel</string>
    <string name="confirm_label">Confirm</string>
    <string name="example">Example</string>
    <string name="close_label">Close</string>
    <string name="reset_label">Reset</string>
    <string name="calculate_label">Calculate</string>
    <string name="random_text">Random X: %1$d</string>
    <string name="result_text">Result: %1$d</string>
    <string name="random_na_text">Random X: N/A</string>
    <string name="result_na_text">Result: N/A</string>
    <string name="game_mode"><u>GAME MODE</u></string>
    <string name="initial_score" translatable="false">0 vs 0</string>
    <string name="hint_time_prompt">Hint Time</string>
    <string name="initial_round">Round 1</string>
    <string name="initial_round_time" translatable="false">180</string>
    <string name="game_time_prompt">Game Time</string>
    <string name="operator_prompt" translatable="false">Operator List\n(Format: A � B with Random number X)</string>
    <string name="initial_hint_time" translatable="false">20</string>
    <string name="action_waiting_hint" translatable="false">Players input into the hint section</string>
    <string name="action_thinking" translatable="false">Thinking/ Answer Time</string>
    <string name="suddenDeath">Sudden Death Mode</string>
    <string name="ok" translatable="false">ok</string>
    <string name="sudden_death_dialog_message" translatable="false">The game is reached the pre-set score/ round, but since both players are having the same score. The game now goes into the Sudden Death Mode. This game will be ended when a player attempts to answer the question!</string>
    <string name="contact_us">Contact Us</string>
    <string name="difficulty_mixed">Mixed</string>
    <string name="difficulty_hard">Hard</string>
    <string name="difficulty_easy">Easy</string>
    <string name="tutorial_main_menu">Main Menu</string>
    <string name="tutorial_gameplay">Gameplay</string>
    <string name="tutorial_functions">Functions</string>
    <string name="example_input_1">Input_1</string>
    <string name="example_input_2">Input_2</string>
    <string name="previous_round_solution">PREVIOUS ROUND SOLUTION</string>
    <string name="tutorial_faq_title"><u>FAQ</u></string>
    <string name="tutorial_function_title"><u>TUTORIAL - OPERATOR</u></string>
    <string name="tutorial_main_menu_title"><u>TUTORIAL - MAIN MENU</u></string>
</resources>