<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <Button
        android:id="@+id/resume_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/resume_game"
        android:layout_marginTop="20dp"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/settings_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:layout_marginTop="10dp"
        android:layout_gravity="center_horizontal"/>

    <Button
        android:id="@+id/quit_button"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:text="@string/quit_game_label"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center_horizontal"/>

</LinearLayout>
