<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/example"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/input1"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:imeOptions="flagNoExtractUi"
            android:hint="@string/example_input_1"
            android:inputType="number"
            android:maxLength="4"/>

        <EditText
            android:id="@+id/input2"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_margin="15dp"
            android:imeOptions="flagNoExtractUi"
            android:hint="@string/example_input_2"
            android:inputType="number"
            android:maxLength="4"/>

    </LinearLayout>

    <TextView
        android:id="@+id/random"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="5dp"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/random_na_text"/>

    <TextView
        android:id="@+id/result"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginBottom="15dp"
        android:gravity="center"
        android:textSize="20sp"
        android:text="@string/result_na_text"/>

</LinearLayout>
