<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/wp1x">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/settings_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/settings"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textSize="35sp"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp">

            <TextView
                android:id="@+id/language_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/language_label"
                android:textColor="@color/white"
                android:textSize="25sp"/>

            <ImageView
                android:id="@+id/select_english_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:background="@drawable/english_selected"/>

            <ImageView
                android:id="@+id/select_chinese_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:background="@drawable/chinese_not_selected"/>

            <ImageView
                android:id="@+id/select_japanese_button"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_marginLeft="30dp"
                android:background="@drawable/japanese_not_selected"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/difficulty_label"
                android:textColor="@color/white"
                android:textSize="25sp"/>

            <RadioGroup
                android:id="@+id/radio_group"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:theme="@style/CheckBox">

                <RadioButton
                    android:id="@+id/easy"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/difficulty_easy"
                    android:textSize="22sp" />

                <RadioButton
                    android:id="@+id/hard"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/difficulty_hard"
                    android:textSize="22sp" />

                <RadioButton
                    android:id="@+id/mixed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="20dp"
                    android:text="@string/difficulty_mixed"
                    android:textSize="22sp" />

            </RadioGroup>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_marginLeft="20dp">

            <TextView
                android:id="@+id/music_label"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/music_label"
                android:textColor="@color/white"
                android:textSize="25sp"/>

            <CheckBox
                android:id="@+id/music_check_box"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:theme="@style/CheckBox" />

        </LinearLayout>

        <Button
            android:id="@+id/contact_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="10dp"
            android:layout_marginLeft="200dp"
            android:layout_marginRight="200dp"
            android:text="@string/contact_us"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/apply_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="200dp"
            android:layout_marginRight="200dp"
            android:text="@string/apply"
            android:layout_gravity="center"/>

    </LinearLayout>

</ScrollView>